--- a/btr/templates/index.html
+++ b/btr/templates/index.html
@@ -2,14 +2,30 @@
 
 {% load django_bootstrap5 %}
 {% load i18n %}
+{% load static %}
 
-{% block content %}
-<div class="card mt-4">
-  <div class="card-body p-5 bg-light">
-    <div class="display-4">{% translate 'Task Manager' %}</div>
-    <p class="lead">{% translate 'Try a simple task manager' %}</p>
-    <hr>
-    <a class="btn btn-primary btn-lg" href="#">{% translate 'Get Started' %}</a>
+{% block index %}
+<div class="container">
+<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="10000">
+      <img src="{% static 'images/slide1.jpg' %}" class="d-block w-50 mx-auto" alt="Slide 1">
+    </div>
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="{% static 'images/slide2.jpg' %}" class="d-block w-50 mx-auto" alt="Slide 2">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'images/slide3.jpg' %}" class="d-block w-50 mx-auto" alt="Slide 3">
+    </div>
   </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
+  </div>
 {% endblock %}
