--- a/btr/templates/base.html
+++ b/btr/templates/base.html
@@ -12,15 +12,15 @@
       <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon" sizes="32x32">
   </head>
   <body class="scrollable-background">
-    <div class="container diagonal-gradient">
-      <header>
-        {% include 'navbar.html' %}
-      </header>
-  <div class="mb-3"></div>
-
-
+    <div class="container diagonal-gradient" style="padding: 0;">
+      <header>{% include 'navbar.html' %}</header>
+      <div class="mb-4"></div>
+      {% block index %}{% endblock %}
+    </div>
+  </body>
 {% bootstrap_messages %}
+
 <footer>
 </footer>
-</body>
+
 </html>
