--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,18 +1,69 @@
-.diagonal-gradient {
-  background: linear-gradient(to bottom, rgba(34, 37, 54, 0.8), rgba(118, 100, 106, 0.8));
-  width: 100%;
+body {
+  margin: 0;
+  padding: 0;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.diagonal-gradient {
+    background: linear-gradient(to bottom, rgba(34, 37, 54, 0.9), rgba(118, 100, 106, 0.9));
+    width: 100%;
+    flex: 1;
 }
 
 .scrollable-background {
-  background-image: url('../images/bike4k.jpg');
-  background-size: cover;
-  background-attachment: fixed;
-  width: 100%;
-  height: 100vh;
+    background-image: url('../images/bike4k.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    height: 100vh;
 }
 
-.carousel-container {
-  width: 300px;
-  height: 200px;
+.black-border {
+    padding: 30px;
+    margin: 20px;
+    opacity: 0.7;
+    background-color: black;
+    border-radius: 20px;
+}
+
+.my-carousel {
+    padding: 0;
+}
+
+.my-carousel .carousel-item {
+    display: flex;
+    max-height: 500px;
+}
+
+.my-carousel .carousel-item img {
+    object-fit: none;
+}
+
+.red-text {
+    color: red;
+}
+
+.blue-text {
+    color: #2400FF;
+}
+
+.inline-bg {
+    background-color: rgba(0, 0, 0, 0.8);
+    margin: 20px;
+}
+
+.p-inline-slide {
+    text-indent: 40px;
+}
+
+.main-header-color {
+    color: #E7F9F8;
+}
+
+.h-line {
+    border: none;
+    border-top: 1px solid #fff;
+    margin: 20px 0;
 }
