--- a/btr/templates/base.html
+++ b/btr/templates/base.html
@@ -12,7 +12,7 @@
       <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon" sizes="32x32">
   </head>
   <body class="scrollable-background">
-    <div class="container diagonal-gradient" style="padding: 0;">
+    <div class="container diagonal-gradient px-0">
       <header>{% include 'navbar.html' %}</header>
       <div class="mb-4"></div>
       {% block index %}{% endblock %}
