--- a/btr/templates/index.html
+++ b/btr/templates/index.html
@@ -5,95 +5,49 @@
 {% load static %}
 
 {% block index %}
+{% include 'carousel.html' %}
 
-<div class="container-fluid my-carousel">
-    <div id="carouselExampleFade" class="carousel slide carousel-fade">
-      <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="{% static 'images/carousel/01.jpg' %}" class="d-block w-100" alt="1">
-      <div class="carousel-caption d-none d-md-block inline-bg">
-        <h1 class="red-text">Enduro rental with a guide</h1>
-        <p class="fw-bold p-inline-slide">
-          Experience the thrill of adventure with our professional motorcycle guide.
-          Our seasoned guide will lead you on an exhilarating journey through rugged terrains, ensuring a safe and memorable ride as you explore the scenic landscapes and hidden gems of the Leningrad Region
-        </p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'images/carousel/02.jpg' %}" class="d-block w-100" alt="2">
-      <div class="carousel-caption d-none d-md-block inline-bg">
-        <h1 class="red-text">Scenic Tours</h1>
-        <p class="fw-bold p-inline-slide">
-          Discover the scenic beauty of the Leningrad Region on our picturesque tours.
-          Explore the region's stunning landscapes, charming villages, and historic landmarks as you embark on a journey through the natural wonders and rich history of this captivating destination.
-        </p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'images/carousel/03.jpg' %}" class="d-block w-100" alt="3">
-      <div class="carousel-caption d-none d-md-block inline-bg">
-        <h1 class="red-text">Professional Equipment</h1>
-        <p class="fw-bold p-inline-slide">
-          Gear up for your motorcycle adventure with our top-quality professional riding gear.
-          Our selection of premium motorcycle equipment ensures your safety and comfort as you hit the road to explore the picturesque landscapes of the Leningrad Region.
-          Stay protected and ride in style with our high-performance gear designed for the ultimate riding experience
-        </p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+<h1 class="fs-1 my-5 text-center main-header-color text-uppercase">Bikes</h1>
+<div class="m-5">
+  <hr class="h-line">
 </div>
+
+{% include 'cards.html' %}
+<div class="my-4"></div>
+<div class="m-5 text-center main-header-color">
+  <h2>Carefully Maintained and Tuned</h2>
+  <div class="my-4"></div>
+  <p class="h4">All our motorcycles have undergone meticulous maintenance and tuning, ensuring high quality and safety</p>
 </div>
-<h1 class="fs-1 mt-5 mb-5 text-center main-header-color text-uppercase">Rental enduro bikes in Saint-Petersburg</h1>
-<h1 class="fs-2 mt-5 text-center main-header-color">Our bike's</h1>
-<hr class="h-line">
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-  <div class="col-md-5 p-lg-5 mx-auto my-5">
-    <h1 class="display-4 fw-normal">X Motos 250</h1>
-    <p class="lead fw-normal">И еще более остроумный подзаголовок в придачу. Начните свои маркетинговые усилия с этого примера, основанного на маркетинговых страницах Apple.</p>
-    <a class="btn btn-outline-secondary" href="#">Скоро будет</a>
-  </div>
-  <div class="product-device shadow-sm d-none d-md-block"></div>
-  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+
+<div class="my-5"></div>
+<br>
+<h1 class="fs-1 my-5 text-center main-header-color text-uppercase">Routes</h1>
+<div class="m-5">
+  <hr class="h-line">
 </div>
-<div class="container">
+{% include 'routes_carousel.html' %}
+<div class="my-4"></div>
+<div class="m-5 text-center main-header-color">
+  <h2>Combining Beautiful Scenery with Adrenaline</h2>
+  <div class="my-4"></div>
+  <p class="h4">Experience the perfect blend of stunning landscapes and exhilarating adventure</p>
+</div>
+
+<div class="my-5"></div>
+<br>
+<h1 class="fs-1 my-5 text-center main-header-color text-uppercase">Contacts</h1>
+<div class="m-5">
+  <hr class="h-line">
+</div>
+<div class="container justify-content-between">
   <div class="row">
-    <div class="col">
-      <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
-        <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-
-          <div class="my-3 py-3">
-            <h2 class="display-5">Progasi Ibiza 300</h2>
-            <p class="lead">И еще более остроумный подзаголовок.</p>
-
-          </div>
-          <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-        </div>
-    <div class="col">
-
+    <div class="col-auto">
+      <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/?ll=29.517382%2C60.191191&mode=whatshere&utm_medium=mapframe&utm_source=maps&whatshere%5Bpoint%5D=29.513170%2C60.190044&whatshere%5Bzoom%5D=17&z=16.6" style="color:#eee;font-size:12px;position:absolute;top:14px;">Посёлок Молодёжное — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?ll=29.517382%2C60.191191&mode=whatshere&whatshere%5Bpoint%5D=29.513170%2C60.190044&whatshere%5Bzoom%5D=17&z=16.6" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
     </div>
-    <div class="bg-light pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-      <div class="my-3 p-3">
-        <h2 class="display-5">GR-7 300</h2>
-        <p class="lead">И еще более остроумный подзаголовок.</p>
-      </div>
-      <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-    </div>
+    <div class="col-auto">
+
     </div>
   </div>
-    </div>
-  </div>
-
+</div>
 {% endblock %}
