pre-finished home page

--- a/btr/templates/carousel.html
+++ b/btr/templates/carousel.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="container-fluid my-carousel mb-5">
-    <div id="carouselExampleFade" class="carousel slide carousel-fade">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
