--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -93,6 +93,8 @@ body {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
+
+
 .list-rectangle {
 list-style: none;
 margin: 0;
@@ -133,4 +135,8 @@ background: #ec407a;
 .lg-m-y {
     margin-top: 100px;
     margin-bottom: 100px;
+}
+
+.bg-form {
+    background-color: rgba(0, 0, 0, 0.4);
 }
