--- a/btr/templates/users/edit.html
+++ b/btr/templates/users/edit.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <h1 class="mb-5 text-center text-white">{{ header }}</h1>
-            <form method="post" class="text-white">
+            <form method="post" class="text-white" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% bootstrap_form form %}
                 <input class="btn btn-success" type="submit" value="{{ button }}">
