--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -140,3 +140,10 @@ background: #ec407a;
 .bg-form {
     background-color: rgba(0, 0, 0, 0.4);
 }
+
+.round-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+}
