--- a/btr/templates/users/profile.html
+++ b/btr/templates/users/profile.html
@@ -1,7 +1,82 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
 
 {% block content %}
+<div class="container text-center text-white lg-m-t">
+  <h1 class="fs-1">{% translate 'Profile' %}</h1>
+  <hr class="my-4">
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 mb-3">
+      <div class="card card-bg">
+        <div class="card-body">
+          <div class="d-flex flex-column align-items-center text-center">
+            {% if user.profile_image %}
+            <img src="{{ user.profile_image.url|safe }}" alt="user" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
+            {% else %}
+            <img src="{% static 'images/user_image.png' %}" alt="user" class="rounded-circle" width="150">
+            {% endif %}
+            <div class="mt-3">
+              <h4 class="text-white">{{ user.username }}</h4>
+              <p class="text-secondary text-white mb-1">{{ user.email }}</p>
+              <p class="text-secondary text-white font-size-sm">{{ user.phone_number }}</p>
+              <a class="btn btn-light" href="#" >Book Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col mb-3">
+      <div class="card card-bg h-100">
+        <div class="card-body">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0 text-white">Name</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary text-white">
+                      {{ user.first_name }}
+                    </div>
+                  </div>
+                  <hr class="text-white">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0 text-white">Email</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary text-white">
+                      {{ user.email }}
+                    </div>
+                  </div>
+                  <hr class="text-white">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0 text-white">Phone</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary text-white">
+                      {{ user.phone_number }}
+                    </div>
+                  </div>
+                  <hr class="text-white">
+                  <div class="row">
+                    <div class="col-sm-4 mb-3 position-absolute bottom-0 start-0">
+                      <a class="btn btn-outline-info" href="{% url 'user_edit' pk=user.pk %}">Edit Profile</a>
+                    </div>
+                    <div class="col-sm-2"></div>
+                    <div class="col-sm-4 mb-3 position-absolute bottom-0 start-50">
+                      <a class="btn btn-outline-danger" href="{% url 'user_delete' pk=user.pk %}">Delete Profile</a>
+                    </div>
+                  </div>
+                </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 <div class="container">
     <div class="main-body">
           <div class="row gutters-sm">
@@ -57,11 +132,13 @@
                   <div class="row">
                     <div class="col-sm-12">
                       <a class="btn btn-outline-info" href="{% url 'user_edit' pk=user.pk %}">Edit Profile</a>
+                      <a class="btn btn-outline-danger ml-auto" href="{% url 'user_delete' pk=user.pk %}">Delete Profile</a>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="row gutters-sm">
+              <div class="container">
+              <div class="row">
                 <div class="col-sm-6 mb-3">
                   <div class="card h-100 card-bg text-white">
                     <div class="card-body">
@@ -74,10 +151,13 @@
                 <div class="col-sm-6 mb-3">
                   <div class="card h-100 card-bg text-white">
                     <div class="card-body">
-                      <h6 class="d-flex align-items-center mb-3">Ride history</h6>
+                      <h6 class="d-flex align-items-center mb-3">
+                        Ride history
+                      </h6>
                     </div>
                   </div>
                 </div>
+              </div>
               </div>
             </div>
           </div>
