--- a/btr/templates/users/profile.html
+++ b/btr/templates/users/profile.html
@@ -29,138 +29,135 @@
       </div>
     </div>
     <div class="col mb-3">
-      <div class="card card-bg h-100">
+      <div class="card card-bg text-white h-100">
         <div class="card-body">
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0 text-white">Name</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary text-white">
-                      {{ user.first_name }}
-                    </div>
-                  </div>
-                  <hr class="text-white">
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0 text-white">Email</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary text-white">
-                      {{ user.email }}
-                    </div>
-                  </div>
-                  <hr class="text-white">
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0 text-white">Phone</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary text-white">
-                      {{ user.phone_number }}
-                    </div>
-                  </div>
-                  <hr class="text-white">
-                  <div class="row">
-                    <div class="col-sm-4 mb-3 position-absolute bottom-0 start-0">
-                      <a class="btn btn-outline-info" href="{% url 'user_edit' pk=user.pk %}">Edit Profile</a>
-                    </div>
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm-4 mb-3 position-absolute bottom-0 start-50">
-                      <a class="btn btn-outline-danger" href="{% url 'user_delete' pk=user.pk %}">Delete Profile</a>
-                    </div>
-                  </div>
-                </div>
+          <h3 class="card-title">Personal info</h3>
+          <div class="my-5"></div>
+          <div class="row">
+            <div class="col-sm-3">
+              <h6 class="mb-0 text-white">Name</h6>
+            </div>
+            <div class="col-sm-9 text-secondary text-white">
+              {{ user.first_name }}
+            </div>
+          </div>
+          <hr class="text-white">
+          <div class="row">
+            <div class="col-sm-3">
+              <h6 class="mb-0 text-white">Email</h6>
+            </div>
+            <div class="col-sm-9 text-secondary text-white">
+              {{ user.email }}
+            </div>
+          </div>
+          <hr class="text-white">
+          <div class="row">
+            <div class="col-sm-3">
+              <h6 class="mb-0 text-white">Phone</h6>
+            </div>
+            <div class="col-sm-9 text-secondary text-white">
+              {{ user.phone_number }}
+            </div>
+          </div>
+          <hr class="text-white">
+          <div class="my-4"></div>
+          <a href="{% url 'user_edit' pk=user.pk %}" class="btn btn-outline-warning">Edit Profile</a>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-6 mb-3">
+          <div class="card h-100 card-bg text-white">
+            <div class="card-body">
+              <h5 class="d-flex align-items-center mb-3">
+                Current rides
+              </h5>
+              {% if not current_bookings %}
+              <ul>
+                <li>There are not current bookings yet</li>
+              </ul>
+              {% else %}
+              <table class="table">
+                <thead class="text-white">
+                  <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Begin time</th>
+                    <th scope="col">End time</th>
+                    <th scope="col">Status</th>
+                  </tr>
+                </thead>
+                  <tbody>
+                  {% for ride in current_bookings %}
+                  {% if ride.status == 'pending' %}
+                  <tr class="table-warning">
+                  {% else %}
+                  <tr class="table-success">
+                  {% endif %}
+                    <th scope="row">{{ ride.id }}</th>
+                    <td>{{ ride.booking_date }}</td>
+                    <td>{{ ride.start_time }}</td>
+                    <td>{{ ride.end_time }}</td>
+                    <td>{{ ride.status }}</td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 mb-3">
+          <div class="card h-100 card-bg text-white">
+            <div class="card-body">
+              <h5 class="d-flex align-items-center mb-3">
+                History
+              </h5>
+              {% if not completed_bookings %}
+              <ul>
+                <li>There are not completed bookings yet</li>
+              </ul>
+              {% else %}
+              <table class="table">
+                <thead class="text-white">
+                  <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Begin time</th>
+                    <th scope="col">End time</th>
+                    <th scope="col">Status</th>
+                  </tr>
+                </thead>
+                  <tbody>
+                  {% for booking in completed_bookings %}
+                  {% if booking.status == 'completed' %}
+                  <tr class="table-primary">
+                  {% else %}
+                  <tr class="table-danger">
+                  {% endif %}
+                    <th scope="row">{{ booking.id }}</th>
+                    <td>{{ booking.booking_date }}</td>
+                    <td>{{ booking.start_time }}</td>
+                    <td>{{ booking.end_time }}</td>
+                    <td>{{ booking.status }}</td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row text-center text-white">
+        <div class="col my-4">
+          <h4 class="fs-5">
+          If you liked the ride, leave a <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><strong>review</strong></a>
+        </h4>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
-
-
-
-
-<div class="container">
-    <div class="main-body">
-          <div class="row gutters-sm">
-            <div class="col-md-4 mb-3">
-              <div class="card card-bg">
-                <div class="card-body">
-                  <div class="d-flex flex-column align-items-center text-center">
-                    {% if user.profile_image %}
-                    <img src="{{ user.profile_image.url|safe }}" alt="user" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
-                    {% else %}
-                    <img src="{% static 'images/user_image.png' %}" alt="user" class="rounded-circle" width="150">
-                    {% endif %}
-                    <div class="mt-3">
-                      <h4 class="text-white">{{ user.username }}</h4>
-                      <p class="text-secondary text-white mb-1">{{ user.email }}</p>
-                      <p class="text-secondary text-white font-size-sm">{{ user.phone_number }}</p>
-                      <a class="btn btn-light" href="#" >Book Now</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-8">
-              <div class="card mb-3 card-bg">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0 text-white">Name</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary text-white">
-                      {{ user.first_name }}
-                    </div>
-                  </div>
-                  <hr class="text-white">
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0 text-white">Email</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary text-white">
-                      {{ user.email }}
-                    </div>
-                  </div>
-                  <hr class="text-white">
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0 text-white">Phone</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary text-white">
-                      {{ user.phone_number }}
-                    </div>
-                  </div>
-                  <hr class="text-white">
-                  <div class="row">
-                    <div class="col-sm-12">
-                      <a class="btn btn-outline-info" href="{% url 'user_edit' pk=user.pk %}">Edit Profile</a>
-                      <a class="btn btn-outline-danger ml-auto" href="{% url 'user_delete' pk=user.pk %}">Delete Profile</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="container">
-              <div class="row">
-                <div class="col-sm-6 mb-3">
-                  <div class="card h-100 card-bg text-white">
-                    <div class="card-body">
-                      <h6 class="d-flex align-items-center mb-3">
-                        Current bookings
-                      </h6>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 mb-3">
-                  <div class="card h-100 card-bg text-white">
-                    <div class="card-body">
-                      <h6 class="d-flex align-items-center mb-3">
-                        Ride history
-                      </h6>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              </div>
-            </div>
-          </div>
-        </div>
-    </div>
 {% endblock %}
