make reviews page

--- a/btr/templates/navbar.html
+++ b/btr/templates/navbar.html
@@ -14,10 +14,10 @@
           <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">Reviews</a>
+          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'reviews' %}">Reviews</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">Briefing</a>
+          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'briefing' %}">Briefing</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">FAQ</a>
