finished contacts templates

--- a/btr/templates/base.html
+++ b/btr/templates/base.html
@@ -10,6 +10,7 @@
       {% bootstrap_javascript %}
       <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
       <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon" sizes="32x32">
+      <script src="https://vk.com/js/api/openapi.js?169" type="text/javascript"></script>
   </head>
   <body class="scrollable-background">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
