--- a/btr/templates/navbar.html
+++ b/btr/templates/navbar.html
@@ -23,7 +23,7 @@
           <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">FAQ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="#">Contacts</a>
+          <a class="nav-link active font-weight-bold text-white" aria-current="page" href="{% url 'contacts' %}">Contacts</a>
         </li>
       </ul>
       <ul class="navbar-nav" style="margin-left: auto;">
