--- a/btr/templates/briefing/show.html
+++ b/btr/templates/briefing/show.html
@@ -36,5 +36,13 @@
             <img src="https://sun9-43.userapi.com/impg/DvedIpVNnwMvupq4pTKSu6Dpp50RbzrpChR2JQ/D0fHQlDw-Vw.jpg?size=1280x720&quality=95&sign=46e0cc8f2e7924114e44937403764227&type=album" alt="005">
         </div>
     </div>
+    <div class="row text-center text-white mb-4">
+        <div class="col-3"></div>
+        <div class="col-6">
+            <hr class="h-line" style="opacity:1;">
+        </div>
+        <div class="col-3"></div>
+        <p class="fs-2">{% translate 'Following these instructions will help you avoid injury.' %}</p>
+    </div>
 </div>
 {% endblock %}
