--- a/btr/templates/cards.html
+++ b/btr/templates/cards.html
@@ -18,7 +18,7 @@
           <ul class="list-rectangle ">
             <li>300cc engine</li>
             <li>26 hp</li>
-            <li>Manual transmission</li>
+            <li>2500₽ / hour</li>
           </ul>
           <div class="card-body d-flex justify-content-between">
             <a href="#" class="btn btn-outline-success">Book Now</a>
@@ -42,7 +42,7 @@
           <ul class="list-rectangle ">
             <li>250cc engine</li>
             <li>21 hp</li>
-            <li>Manual transmission</li>
+            <li>2000₽ / hour</li>
           </ul>
           <div class="card-body d-flex justify-content-between">
             <a href="#" class="btn btn-outline-success">Book Now</a>
@@ -66,7 +66,7 @@
           <ul class="list-rectangle ">
             <li>300cc engine</li>
             <li>27 hp</li>
-            <li>Manual transmission</li>
+            <li>2500₽ / hour</li>
           </ul>
           <div class="card-body d-flex justify-content-between">
             <a href="#" class="btn btn-outline-success">Book Now</a>
