--- a/btr/templates/contacts.html
+++ b/btr/templates/contacts.html
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="row text-center text-white lg-m-t">
-    <a class="text-white" href="https://www.youtube.com/@VovkaLife365" style="text-decoration: none;"><h1 class="fs-1"><img class="m-3" src="{% static 'images/yt.png' %}" alt="tel" width="50px" height="50px">YouTube</h1></a>
+    <a class="text-white" href="https://www.youtube.com/@VovkaLife365" style="text-decoration: none;"><h1 class="fs-1"><img class="m-3" src="{% static 'images/socials/yt.png' %}" alt="youtube" width="50px" height="50px">YouTube</h1></a>
   </div>
   <div class="row text-center text-white lg-m-b">
     <h1 class="fs-1"><img class="m-3" src="{% static 'images/tel.png' %}" alt="tel" width="50px" height="50px">+7 999-235-00-91</h1>
