--- a/btr/templates/index.html
+++ b/btr/templates/index.html
@@ -10,12 +10,12 @@
     <img src="{% static 'images/frame.jpg' %}" alt="frame">
   </div>
 </div>
-<h1 class="display-1 text-white text-center lg-m-t">Прокат эндуро мотоциклов</h1>
-<h1 class="display-3 text-white text-center mb-4">В Санкт-Петербурге</h1>
+<h1 class="display-1 text-white text-center lg-m-t">{% translate 'Enduro bikes rental' %}</h1>
+<h1 class="display-3 text-white text-center mb-4">{% translate 'In Saint-Petersburg' %}</h1>
 <div class="container lg-m-b">
   <div class="row">
     <div class="col-12 text-center">
-    <a class="btn btn-outline-light btn-lg" href="https://vk.me/broteamracing">Записаться на прокат</a>
+    <a class="btn btn-outline-light btn-lg" href="https://vk.me/broteamracing">{% translate 'Book now' %}</a>
       </div>
   </div>
 </div>
@@ -23,7 +23,7 @@
 
 <div class="container lg-m-y">
   <div class="row text-center">
-    <h1 class="display-4 text-white">Bikes</h1>
+    <h1 class="display-4 text-white">{% translate 'Bikes' %}</h1>
     <div class="col"></div>
     <div class="col text-center">
       <hr class="h-line" style="opacity: 1;">
@@ -31,11 +31,11 @@
     <div class="col"></div>
   </div>
   <div class="row text-center">
-    <h2 class="mt-4 text-white">Carefully Maintained and Tuned</h2>
+    <h2 class="mt-4 text-white">{% translate 'Carefully Maintained and Tuned' %}</h2>
   </div>
   <div class="row text-center">
     <p class="h4 text-white mt-3">
-      All our motorcycles have undergone meticulous maintenance and tuning, ensuring high quality and safety
+      {% translate 'All our motorcycles have undergone meticulous maintenance and tuning, ensuring high quality and safety' %}
     </p>
   </div>
 </div>
@@ -44,16 +44,17 @@
 
 <div class="container lg-m-y">
   <div class="row text-center">
-    <h1 class="display-4 text-white">Take a simle Try</h1>
+    <h1 class="display-4 text-white">{% translate 'Take a simle Try' %}</h1>
   </div>
   <div class="row lg-m-t mx-5 justify-content-between">
     <div class="col-auto">
       <div class="card h-100 d-flex" style="width: 22rem; background-color: transparent; border-color: transparent;">
         <img src="{% static 'images/ico_block/ico1.png' %}" class="card-img-top" alt="ico-1">
         <div class="card-body text-white">
-          <h3 class="card-title">Guide accompaniment</h3>
+          <h3 class="card-title">{% translate 'Guide accompaniment' %}</h3>
+          <hr class="h-line" style="opacity:1;">
           <p class="card-text fs-5">
-            Throughout the trip you will be accompanied by an experienced guide who will teach you riding techniques and give advice.
+            {% translate 'Throughout the trip you will be accompanied by an experienced guide who will teach you riding techniques and give advice.' %}
           </p>
         </div>
       </div>
@@ -62,9 +63,10 @@
       <div class="card h-100 d-flex" style="width: 22rem; background-color: transparent; border-color: transparent;">
         <img src="{% static 'images/ico_block/ico2.png' %}" class="card-img-top" alt="ico-2">
         <div class="card-body text-white">
-          <h3 class="card-title">Safety Equipment</h3>
+          <h3 class="card-title">{% translate 'Safety Equipment' %}</h3>
+          <hr class="h-line" style="opacity:1;">
           <p class="card-text fs-5">
-            All equipment for safe driving is already included in the rental price
+            {% translate 'All equipment for safe driving is already included in the rental price' %}
           </p>
         </div>
       </div>
@@ -73,9 +75,10 @@
       <div class="card h-100 d-flex" style="width: 22rem; background-color: transparent; border-color: transparent;">
         <img src="{% static 'images/ico_block/ico3.png' %}" class="card-img-top" alt="ico-3">
         <div class="card-body text-white">
-          <h3 class="card-title">No driver's license required</h3>
+          <h3 class="card-title">{% translate 'No license required' %}</h3>
+          <hr class="h-line" style="opacity:1;">
           <p class="card-text fs-5">
-            To operate an enduro motorcycle you do not need a driver's license, because it is sports equipment
+            {% translate 'To operate an enduro motorcycle you do not need a driver\'s license, because it is sports equipment' %}
           </p>
         </div>
       </div>
@@ -86,7 +89,7 @@
 
 <div class="container lg-m-y">
   <div class="row text-center">
-    <h1 class="display-4 text-white">Routes</h1>
+    <h1 class="display-4 text-white">{% translate 'Routes' %}</h1>
     <div class="col"></div>
     <div class="col text-center">
       <hr class="h-line" style="opacity: 1;">
@@ -94,11 +97,11 @@
     <div class="col"></div>
   </div>
   <div class="row text-center">
-    <h2 class="mt-4 text-white">Combining Beautiful Scenery with Adrenaline</h2>
+    <h2 class="mt-4 text-white">{% translate 'Combining Beautiful Scenery with Adrenaline' %}</h2>
   </div>
   <div class="row text-center">
     <p class="h4 text-white mt-3">
-      Experience the perfect blend of stunning landscapes and exhilarating adventure
+      {% translate 'Experience the perfect blend of stunning landscapes and exhilarating adventure' %}
     </p>
   </div>
 </div>
